--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
   <description>Nuxeo Platform Faceted Search Parent pom</description>
   <packaging>pom</packaging>
 
+  <properties>
+    <nuxeo.distribution.version>5.4.0-SNAPSHOT</nuxeo.distribution.version>
+  </properties>
+
   <modules>
     <module>nuxeo-platform-faceted-search-jsf</module>
     <module>nuxeo-platform-faceted-search-dm</module>
@@ -29,6 +33,20 @@
         <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-faceted-search-dm</artifactId>
         <version>${nuxeo.features.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.nuxeo.ecm.distribution</groupId>
+        <artifactId>nuxeo-distribution-jboss</artifactId>
+        <version>${nuxeo.distribution.version}</version>
+        <classifier>nuxeo-dm</classifier>
+        <type>zip</type>
+      </dependency>
+      <dependency>
+        <groupId>org.seleniumhq.selenium.server</groupId>
+        <artifactId>selenium-server</artifactId>
+        <version>1.0.3</version>
+        <classifier>standalone</classifier>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -48,6 +66,6 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
-  </repositories> 
+  </repositories>
 
 </project>
