NXP-5449: make it possible to save and load a faceted search with its parameters

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
         <version>1.0.3</version>
         <classifier>standalone</classifier>
       </dependency>
+
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-ui-web-test</artifactId>
+        <version>${nuxeo.jsf.version}</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
