--- a/nuxeo-platform-faceted-search-jsf/pom.xml
+++ b/nuxeo-platform-faceted-search-jsf/pom.xml
@@ -39,6 +39,10 @@
     </dependency>
 
     <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-annotations</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.jboss.seam</groupId>
       <artifactId>jboss-seam</artifactId>
     </dependency>
