--- a/nuxeo-platform-faceted-search-dm/pom.xml
+++ b/nuxeo-platform-faceted-search-dm/pom.xml
@@ -12,4 +12,18 @@
   <name>Nuxeo Platform Faceted Search DM</name>
   <description>Nuxeo Platform Faceted Search DM</description>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-ui-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-faceted-search-jsf</artifactId>
+    </dependency>
+  </dependencies>
 </project>
