--- a/nuxeo-platform-faceted-search-api/pom.xml
+++ b/nuxeo-platform-faceted-search-api/pom.xml
@@ -8,9 +8,9 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.nuxeo.ecm.platform</groupId>
-  <artifactId>nuxeo-platform-faceted-search-dm</artifactId>
-  <name>Nuxeo Platform Faceted Search DM</name>
-  <description>Nuxeo Platform Faceted Search DM</description>
+  <artifactId>nuxeo-platform-faceted-search-api</artifactId>
+  <name>Nuxeo Platform Faceted Search API</name>
+  <description>Nuxeo Platform Faceted Search API</description>
 
   <dependencies>
     <dependency>
@@ -19,20 +19,8 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
-      <artifactId>nuxeo-platform-faceted-search-jsf</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-ui-web</artifactId>
     </dependency>
-
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-annotations</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.seam</groupId>
-      <artifactId>jboss-seam</artifactId>
-    </dependency>
   </dependencies>
+
 </project>
