--- a/nuxeo-platform-faceted-search-jsf/pom.xml
+++ b/nuxeo-platform-faceted-search-jsf/pom.xml
@@ -19,6 +19,10 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-faceted-search-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-ui-web</artifactId>
     </dependency>
     <dependency>
