--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-platform-faceted-search-parent</artifactId>
-  <name>Nuxeo Platform Faceted Search Parent pom</name>
-  <description>Nuxeo Platform Faceted Search Parent pom</description>
+  <name>Nuxeo Platform Faceted Search Parent</name>
+  <description>Nuxeo Platform Faceted Search Parent</description>
   <packaging>pom</packaging>
 
   <properties>
@@ -18,12 +18,23 @@
   </properties>
 
   <modules>
+    <module>nuxeo-platform-faceted-search-api</module>
     <module>nuxeo-platform-faceted-search-jsf</module>
     <module>nuxeo-platform-faceted-search-dm</module>
   </modules>
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-faceted-search-api</artifactId>
+        <version>${nuxeo.features.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-faceted-search-core</artifactId>
+        <version>${nuxeo.features.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-faceted-search-jsf</artifactId>
