--- a/nuxeo-platform-faceted-search-dm/pom.xml
+++ b/nuxeo-platform-faceted-search-dm/pom.xml
@@ -22,7 +22,11 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
-      <artifactId>nuxeo-platform-ui-web</artifactId>
+      <artifactId>nuxeo-platform-contentview-jsf</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-virtualnavigation-web</artifactId>
     </dependency>
 
     <dependency>
