--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,6 @@
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-faceted-search-core</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-faceted-search-jsf</artifactId>
         <version>${nuxeo.features.version}</version>
       </dependency>
@@ -44,6 +39,12 @@
         <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-faceted-search-dm</artifactId>
         <version>${nuxeo.features.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-contentview-jsf</artifactId>
+        <version>${nuxeo.jsf.version}</version>
       </dependency>
 
       <dependency>
