--- a/nuxeo-platform-faceted-search-ftest/pom.xml
+++ b/nuxeo-platform-faceted-search-ftest/pom.xml
@@ -28,28 +28,17 @@
             </artifactItem>
             <artifactItem>
               <groupId>org.nuxeo.ecm.distribution</groupId>
-              <artifactId>nuxeo-distribution-jboss</artifactId>
+              <artifactId>nuxeo-distribution-tomcat</artifactId>
               <classifier>nuxeo-dm</classifier>
               <type>zip</type>
               <overWrite>true</overWrite>
               <outputDirectory>target</outputDirectory>
             </artifactItem>
-            <!-- won't need that when nuxeo-platform-faceted-search will be integrated into Nuxeo DM -->
             <artifactItem>
-              <groupId>org.nuxeo.ecm.platform</groupId>
-              <artifactId>nuxeo-platform-faceted-search-api</artifactId>
-              <overWrite>true</overWrite>
-              <outputDirectory>target</outputDirectory>
-            </artifactItem>
-            <artifactItem>
-              <groupId>org.nuxeo.ecm.platform</groupId>
-              <artifactId>nuxeo-platform-faceted-search-jsf</artifactId>
-              <overWrite>true</overWrite>
-              <outputDirectory>target</outputDirectory>
-            </artifactItem>
-            <artifactItem>
-              <groupId>org.nuxeo.ecm.platform</groupId>
-              <artifactId>nuxeo-platform-faceted-search-dm</artifactId>
+              <groupId>org.nuxeo.ecm.distribution</groupId>
+              <artifactId>nuxeo-distribution-jboss</artifactId>
+              <classifier>nuxeo-dm</classifier>
+              <type>zip</type>
               <overWrite>true</overWrite>
               <outputDirectory>target</outputDirectory>
             </artifactItem>
