--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
         <type>zip</type>
       </dependency>
       <dependency>
+        <groupId>org.nuxeo.ecm.distribution</groupId>
+        <artifactId>nuxeo-distribution-tomcat</artifactId>
+        <version>${nuxeo.distribution.version}</version>
+        <classifier>nuxeo-dm</classifier>
+        <type>zip</type>
+      </dependency>
+      <dependency>
         <groupId>org.seleniumhq.selenium.server</groupId>
         <artifactId>selenium-server</artifactId>
         <version>1.0.3</version>
