--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.1-SNAPSHOT</version>
+    <version>5.4.1-I20110111_0116</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.nuxeo.ecm.platform</groupId>
@@ -14,7 +14,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <nuxeo.distribution.version>5.4.1-SNAPSHOT</nuxeo.distribution.version>
+    <nuxeo.distribution.version>5.4.1-I20110111_0116</nuxeo.distribution.version>
   </properties>
 
   <modules>
