--- a/nuxeo-platform-faceted-search-ftest/pom.xml
+++ b/nuxeo-platform-faceted-search-ftest/pom.xml
@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-faceted-search-parent</artifactId>
@@ -8,8 +7,33 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>nuxeo-platform-faceted-search-ftest</artifactId>
-  <name>Nuxeo Platform Faceted Search Functionnal Tests</name>
-  <description>Nuxeo Platform Faceted Search Functionnal Tests</description>
+  <name>Nuxeo Platform Faceted Search Functional Tests</name>
+  <description>Nuxeo Platform Faceted Search Functional Tests</description>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.nuxeo.ecm.distribution</groupId>
+        <artifactId>nuxeo-distribution-jboss</artifactId>
+        <version>${nuxeo.distribution.version}</version>
+        <classifier>nuxeo-dm</classifier>
+        <type>zip</type>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.distribution</groupId>
+        <artifactId>nuxeo-distribution-tomcat</artifactId>
+        <version>${nuxeo.distribution.version}</version>
+        <classifier>nuxeo-dm</classifier>
+        <type>zip</type>
+      </dependency>
+      <dependency>
+        <groupId>org.seleniumhq.selenium.server</groupId>
+        <artifactId>selenium-server</artifactId>
+        <version>1.0.3</version>
+        <classifier>standalone</classifier>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <plugins>
