--- a/nuxeo-platform-faceted-search-ftest/pom.xml
+++ b/nuxeo-platform-faceted-search-ftest/pom.xml
@@ -18,9 +18,8 @@
         <configuration>
           <artifactItems>
             <artifactItem>
-              <groupId>org.seleniumhq.selenium.server</groupId>
-              <artifactId>selenium-server</artifactId>
-              <classifier>standalone</classifier>
+              <groupId>org.seleniumhq.selenium</groupId>
+              <artifactId>selenium-server-standalone</artifactId>
               <overWrite>false</overWrite>
               <outputDirectory>selenium</outputDirectory>
               <destFileName>selenium-server.jar</destFileName>
