--- a/nuxeo-platform-faceted-search-jsf/pom.xml
+++ b/nuxeo-platform-faceted-search-jsf/pom.xml
@@ -85,4 +85,41 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>src/main/seam</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+<!--       <plugin> -->
+<!--         <groupId>org.apache.maven.plugins</groupId> -->
+<!--         <artifactId>maven-eclipse-plugin</artifactId> -->
+<!--         <configuration> -->
+<!--           <additionalProjectnatures> -->
+<!--             <projectnature>org.nuxeo.ide.NuxeoNature</projectnature> -->
+<!--           </additionalProjectnatures> -->
+<!--           <classpathContainers> -->
+<!--             <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer> -->
+<!--             <classpathContainer>org.nuxeo.ide.SDK_CONTAINER</classpathContainer> -->
+<!--             <classpathContainer>org.nuxeo.ide.SDK_TEST_CONTAINER</classpathContainer> -->
+<!--           </classpathContainers> -->
+<!--         </configuration> -->
+<!--       </plugin> -->
+    </plugins>
+  </build>
+
 </project>
