--- a/nuxeo-platform-faceted-search-jsf/pom.xml
+++ b/nuxeo-platform-faceted-search-jsf/pom.xml
@@ -27,6 +27,10 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-forms-layout-io</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-query-api</artifactId>
     </dependency>
     <dependency>
