--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@
   </repositories>
 
   <scm>
-    <connection>scm:hg:http://hg.nuxeo.org/addons/nuxeo-platform-faceted-search</connection>
-    <developerConnection>scm:hg:https://hg.nuxeo.org/addons/nuxeo-platform-faceted-search</developerConnection>
-    <url>http://hg.nuxeo.org/addons/nuxeo-platform-faceted-search</url>
+    <connection>scm:git:git://github.com/nuxeo/nuxeo-platform-faceted-search.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com:nuxeo/nuxeo-platform-faceted-search.git</developerConnection>
+    <url>https://github.com/nuxeo/nuxeo-platform-faceted-search</url>
   </scm>
 
 </project>
