--- a/nuxeo-platform-faceted-search-api/pom.xml
+++ b/nuxeo-platform-faceted-search-api/pom.xml
@@ -19,6 +19,10 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-contentview-jsf</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
