--- a/nuxeo-platform-faceted-search-dm/pom.xml
+++ b/nuxeo-platform-faceted-search-dm/pom.xml
@@ -17,6 +17,10 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-url-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-faceted-search-jsf</artifactId>
     </dependency>
     <dependency>
